fixed the ui of addedit form and fix drop downs not showing in edit mode issue

--- a/todo-frontend/src/app/globals.css
+++ b/todo-frontend/src/app/globals.css
@@ -116,6 +116,14 @@
   * {
     @apply border-border outline-ring/50;
   }
+  html {
+    overflow-y: scroll;
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none; /* IE and Edge */
+  }
+  html::-webkit-scrollbar {
+    display: none; /* Chrome, Safari, Opera */
+  }
   body {
     @apply bg-background text-foreground;
   }
